<resources>
    <string name="app_name">FINAL_TaskManager</string>
    <string name="toDo_headline">To Do List Manager</string>
    <string name="taskTitleHint">Enter a Task Title</string>
    <string name="dueDateHint">Enter a Due Date</string>
    <string name="shortDescriptionHint">Enter Short Description (optional)</string>
    <string name="additionalInformationHint">Enter Additional Information (optional)</string>
    <string name="add">Add</string>
    <string name="alert_title_taskTitle">Task Title Required</string>
    <string name="alert_message_taskTitle">I humbly beg your pardon, but the Task Title field is empty.</string>
    <string name="alert_title_dueDate">Due Date Required</string>
    <string name="alert_message_dueDate">My sincerest apologies, but the Due Date field is empty.</string>
    <string name="alert_title_dueDateFormat">Incorrect Date Format</string>
    <string name="alert_message_dueDateFormat">Acceptable formats are: dd/mm/yyyy, mm/dd/yyyy and perhaps a few others if you ask politely.</string>
</resources>