<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/to_do"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.ToDoFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/toDo_headline"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="@dimen/headlineFont"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_5" />


    <EditText
        android:id="@+id/enterTaskTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_marginEnd="@dimen/margin_2"
        android:ems="10"
        android:hint="@string/taskTitleHint"
        android:inputType="text"
        android:singleLine="false"
        android:textAlignment="textStart"
        android:textSize="@dimen/labelFont"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toTopOf="@id/enterDueDate"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/enterDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/dueDateHint"
        android:textAlignment="textStart"
        android:textSize="@dimen/labelFont"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterTaskTitle"
        app:layout_constraintBottom_toTopOf="@id/enterShortDescription"
        android:layout_marginTop="@dimen/margin_2"
        android:layout_marginStart="@dimen/margin_2"
        android:layout_marginEnd="@dimen/margin_2" />

    <EditText
        android:id="@+id/enterShortDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/shortDescriptionHint"
        android:inputType="text"
        android:textAlignment="textStart"
        android:textSize="@dimen/labelFont"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterDueDate"
        app:layout_constraintBottom_toTopOf="@id/enterAdditionalInformation"
        android:layout_marginTop="@dimen/margin_2"
        android:layout_marginStart="@dimen/margin_2"
        android:layout_marginEnd="@dimen/margin_2"/>

    <EditText
        android:id="@+id/enterAdditionalInformation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/additionalInformationHint"
        android:inputType="text"
        android:textAlignment="textStart"
        android:textSize="@dimen/labelFont"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterShortDescription"
        app:layout_constraintBottom_toTopOf="@id/guideline_35"
        android:layout_marginTop="@dimen/margin_2"
        android:layout_marginStart="@dimen/margin_2"
        android:layout_marginEnd="@dimen/margin_2"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_35"
        app:layout_constraintBottom_toTopOf="@id/tasksView"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasksView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addButton"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>